--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,22 @@
-steps:
- - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/app:$SHORT_SHA']
+steps:  
+  - name: 'gcr.io/cloud-builders/docker'  
+    args: [  
+      'build',  
+      '-t',  
+      'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/my-app:${SHORT_SHA}',  
+      '-t',  
+      'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',  
+      '--cache-from',  
+      'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest',  
+      '.'  
+    ]  
 
-   
+  - name: 'gcr.io/cloud-builders/docker'  
+    args: [  
+      'push',  
+      'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/my-app:${SHORT_SHA}'  
+    ]  
 
- - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/app:$SHORT_SHA']
-
-images: 
- -  'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/app:$SHORT_SHA'
+images:   
+  - 'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/my-app:${SHORT_SHA}'  
+  - 'us-central1-docker.pkg.dev/pub-demo-cb-ar/python-repo/my-app:latest'
