--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:  
   - name: 'gcr.io/cloud-builders/docker'  
     args: ['build', '-t', 'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/my-app:${SHORT_SHA}', '.' ] 
-    logsbucket: 'gs://de-ci-demo-storage'
+    logsBucket: 'gs://de-ci-demo-storage'
 
   - name: 'gcr.io/cloud-builders/docker'  
     args: ['push', 'us-central1-docker.pkg.dev/de-ci-445005/docker-ci-demo-repo/my-app:${SHORT_SHA}']  
